--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<img src="images/logo.png" alt="icon" style="max-width: 750px; @media only screen and (max-width: 800px){width: 300px};">
+							<img src="images/logo.png" alt="icon">
 							<!--<span class="icon fa-gem"></span>-->
 						</div>
 						<div class="content">
