--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<img src="images/logo.png" alt="icon">
+							<img src="images/logo.png" alt="icon" class="header_logo">
 							<!--<span class="icon fa-gem"></span>-->
 						</div>
 						<div class="content">
