--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="icon" href="images/title_logo.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Firma specializující se na komplexné řešení ochrany před bleskem a přepětím">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
