--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 		<link rel="icon" href="images/title_logo.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="Firma specializující se na komplexné řešení ochrany před bleskem a přepětím">
+		<meta property="og:locale" content="cs_CZ" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="LUMA Plus s.r.o. | Ochrana před bleskem a přepětím" />
+		<meta property="og:description" content="Firma zabývající se komplexním řešením ochrany před bleskem a přepětím." />
+		<meta property="og:url" content="https://sklena001.github.io/lumaplus/" />
+		<meta property="og:site_name" content="LUMA Plus" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
