--- a/index.html
+++ b/index.html
@@ -268,13 +268,13 @@
 								</div>
 								<div class="contact_info_child">
 									<h4>Telefonní čísla</h4>
-										<p><strong>Marie Bohuňovská</strong>&emsp;474 623 340<br>
+										<p><strong>Marie Bohuňovská</strong><br>474 623 340<br>
 													(objednávky, účetnictví)<br>
-											<strong>Dalibor Šalanský</strong>&emsp;736 670 142<br>
+											<strong>Dalibor Šalanský</strong><br>736 670 142<br>
 													(technické poradenství)<br>
-											<strong>Martin Sklenička</strong>&emsp;603 233 161<br>
+											<strong>Martin Sklenička</strong><br>603 233 161<br>
 													(technické poradenství)<br>
-											<strong>Lumír Zeman</strong>&emsp;603 463 219<br>
+											<strong>Lumír Zeman</strong><br>603 463 219<br>
 													(obchod, poradenství)
 										</p>
 								</div>
