--- a/index.html
+++ b/index.html
@@ -205,36 +205,66 @@
 	
 </article>				
 							
-						<!-- Kontakty -->
-							<article id="contact">
-								<h2 class="major">Kontakty</h2>
-								<div class="contact_info">
-								<div class="contact_info_child">									
-									<h4>LUMA Plus s.r.o.</h4>
-										<p>Lipská 5820<br>
-										430 03 Chomutov
-										</p>
-										<p><strong>IČ</strong>&ensp;49100581 <br>
-											<strong>DIČ</strong>&ensp;CZ49100581
-										</p>
-										<p><strong>Email:</strong> <a type="email" href="mailto:lumaplus@lumaplus.cz">lumaplus@lumaplus.cz</a></p>
-								</div>
-								<div class="contact_info_child">
-									<h4>Telefonní čísla</h4>
-										<p><strong>Marie Bohuňovská</strong><br>474 623 340<br>
-													(objednávky, účetnictví)<br>
-											<strong>Dalibor Šalanský</strong><br>736 670 142<br>
-													(technické poradenství)<br>
-											<strong>Martin Sklenička</strong><br>603 233 161<br>
-													(technické poradenství)<br>
-											<strong>Lumír Zeman</strong><br>603 463 219<br>
-													(obchod, poradenství)
-										</p>
-								</div>
-								<!--<div class="contact_info_child">
-									<h4></h4>
-								</div>-->
-								</div>
+	<!-- Kontakty -->
+	<article id="contact">
+		<div class="row">
+			<div class="accodian-wrap">
+				<div class="accodian-items">
+					<div class="title" style="font-size: 30px">LUMA Plus s.r.o.</div>
+					<div class="discription">
+						<p>
+						Lipská 5820<br>
+						430 03 Chomutov<br>
+						<strong>IČ</strong>&ensp;49100581<br>
+						<strong>DIČ</strong>&ensp;CZ49100581<br><br>
+						<strong>Email:</strong>&ensp;<a type="email" href="mailto:lumaplus@lumaplus.cz">lumaplus@lumaplus.cz</a><br>
+						</p>
+					</div>
+				</div>
+				<div class="accodian-items">
+					<div class="title">objednávky / účetnictví</div>
+					<div class="discription">
+						<p class="contact_item">
+						Marie Bohuňovská<br>
+						474 623 340
+						</p>
+						<p class="contact_item">
+						Jindřich Beňo<br>
+						734 388 535
+						</p>
+					</div>
+				</div>
+				<div class="accodian-items">
+					<div class="title">technické poradenství</div>
+					<div class="discription">
+						<p class="contact_item">
+						Dalibor Šalanský<br>
+						736 670 142
+						</p>
+						<p class="contact_item">
+						Martin Sklenička<br>
+						603 233 161
+						</p>
+						<p class="contact_item">
+						Tomáš Sklenička<br>
+						732 113 890
+						</p>
+						<p class="contact_item">
+						Jan Jílovec<br>
+						602 672 483
+						</p>
+					</div>
+				</div>
+				<div class="accodian-items">
+					<div class="title">obchod / poradenství</div>
+						<div class="discription">
+							<p class="contact_item">
+							Lumír Zeman<br>
+							603 463 219
+						</div>
+				</div>															
+			</div>
+		</div>
 							<!--	<h3 class="major">Kontaktujte nás</h3>
 								<form method="post" action="#">
 									<div class="fields">
@@ -255,34 +285,34 @@
 										<li><input type="submit" value="Odeslat" class="primary" /></li>
 										<li><input type="reset" value="Smazat" /></li>
 									</ul>
-								</form>-->
-						<!--		<ul class="icons">
+								</form>
+								<ul class="icons">
 									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>	-->
-							</article>
+								</ul> -->
+	</article>
 
-					</div>
+</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<p class="copyright">&copy; LUMA Plus s.r.o. <span id="year"></span>&ensp;&ensp;Design: Tomáš Sklenička&ensp;<a href="https://html5up.net">HTML5 UP</a>&ensp;<a href="https://codepen.io/suez">Nikolay Talanov</a></p>
-					</footer>
+<!-- Footer -->
+	<footer id="footer">
+		<p class="copyright">&copy; LUMA Plus s.r.o. <span id="year"></span>&ensp;&ensp;Design: Tomáš Sklenička&ensp;<a href="https://html5up.net">HTML5 UP</a>&ensp;<a href="https://codepen.io/suez">Nikolay Talanov</a></p>
+	</footer>
 
-			</div>
+</div>
 
-		<!-- BG -->
-			<div id="bg"></div>
+<!-- BG -->
+<div id="bg"></div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
+<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+	<script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
 
 	</body>
 </html>
