--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
 							
 	<!-- Kontakty -->
 	<article id="contact">
+		<h2 class="major">Kontakty</h2>
 		<div class="row">
 			<div class="accodian-wrap">
 				<div class="accodian-items">
