--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 		<div class="row">
 			<div class="accodian-wrap">
 				<div class="accodian-items">
-					<div class="title-main">LUMA Plus s.r.o.</div>
+					<div class="title main-title">LUMA Plus s.r.o.</div>
 					<div class="discription">
 						<p>
 						Lipská 5820<br>
